objects/GenAIAppGeneration__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_generationUpdateId__c</fullName>
        <label>KQ_generationUpdateId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationId__c</fullName>
        <label>generationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationUpdateId__c</fullName>
        <label>generationUpdateId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationUpdate__c</fullName>
        <label>generationUpdate</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>